# TomatoDBServer

./: .gitignore  .gitmodules  todo.txt
Common/: Assertx.cpp  Assertx.h  AvlAPI.h  BaseType.h  CacheShare.h  Chain.h  CrashCatch.h  FileDataMgr.cpp  GameDefine.h  GameUtil.cpp  GameUtil.h  KeyDog.h  MTreeAPI.h  MemAPI.h  NGWordManager.h  PacketDefine.h  PacketFactoryManager.cpp  PlayerStatus.h  Rand.cpp  Rand.h  ReadWriteLock.h  ResultDefine.h  ShareMemAPI.cpp  ShareMemAPI.h  StringArrayTable.cpp  StringArrayTable.h  Type.h  vssver.scc
Common/DataBase/: DBC.cpp  TLBB_DBC.cpp  TLBB_DBC.h  vssver.scc
Common/Net/: EnvFileAPI.cpp  EnvFileAPI.h  Packet.cpp  Packet.h  ServerSocket.cpp  ServerSocket.h  SocketInputStream.cpp  SocketInputStream.h  SocketOutputStream.cpp  SocketOutputStream.h  vssver.scc
Common/Packets/: CGEnterScene.cpp  CGEnterScene.h  CSAskCreateDB.cpp  CSAskCreateDB.h  CSAskDBDefinition.cpp  CSAskDBDefinition.h  CSAskDBManipulate.cpp  CSAskDBManipulate.h  CSAskDBManipulateData.cpp  CSAskDBManipulateData.h  CSAskDBQuery.cpp  CSAskDBQuery.h  CSAskInsertIntoDB.h  CSAskLogin.cpp  CSAskLogin.h  GCEnterScene.h  GCSystemMsg.h  GSRetLogin.cpp  GWAskMail.cpp  GWAskMail.h  GWSystemMsg.cpp  GWSystemMsg.h  SCRetCreateDB.cpp  SCRetCreateDB.h  SCRetDBDefinition.cpp  SCRetDBDefinition.h  SCRetDBManipulate.cpp  SCRetDBManipulate.h  SCRetDBManipulateData.cpp  SCRetDBQuery.cpp  SCRetDBQuery.h  SCRetLogin.cpp  SCRetLogin.h  SSConnect.h  WGMail.cpp  WGMail.h
server/: CMakeLists.txt
server/Config/: ConfigInfo.ini  LoginInfo.ini  MachineInfo.ini  ServerInfo.ini  ShareMemInfo.ini  StringTable.txt  SystemInfo.ini  WorkerInfo.ini  WorldInfo.ini
server/Server/: CMakeLists.txt  stdafx.h
server/Server/Base/: Config.cpp  Config.h  File.cpp  File.h  FileDef.h  IDTable.cpp  IDTable.h  Ini.cpp  Ini.h  Log.cpp  Log.h  StrTable.cpp  StrTable.h  Thread.cpp  Thread.h  TimeManager.cpp  TimeManager.h
server/Server/Character/: Obj_Human.cpp  Obj_Human.h
server/Server/DB/: AdminDB.cpp  AdminDB.h  AdminDBWriter.cpp  AdminDBWriter.h  DBThreadObjectsPool.cpp  DBThreadObjectsPool.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseObject.cpp  DatabaseObject.h  DatabaseOptions.cpp  DatabaseOptions.h
server/Server/DBLink/: DBLinkManager.cpp  DBLinkManager.h  DBLinkObject.cpp  DBLinkObject.h
server/Server/Main/: ClientManager.cpp  DaemonThread.cpp  GUIDManager.cpp  MachineManager.cpp  Performance.cpp  Performance.h  Server.cpp  Server.h  ServerManager.cpp  ServerManager.h  ServerThread.h  ShareMemManager.cpp  ShareMemManager.h  ThreadManager.cpp  ThreadManager.h  ThreadPool.cpp  ThreadPool.h  WorldManager.h
server/Server/Packets/: CGEnterSceneHandler.cpp  CSAskCreateDBHandler.cpp  CSAskDBDefinitionHandler.cpp  CSAskDBManipulateDataHandler.cpp  CSAskDBManipulateHandler.cpp  CSAskDBQueryHandler.cpp  CSAskInsertIntoDBHandler.cpp  CSAskLoginHandler.cpp  NullHandler.cpp  WGMailHandler.cpp  WGSystemMsgHandler.cpp
server/Server/Player/: GamePlayer.cpp  GamePlayer.h  IncomingPlayerManager.cpp  IncomingPlayerManager.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  PlayerPool.cpp  PlayerPool.h  RecyclePlayerManager.cpp  RecyclePlayerManager.h
server/Server/SMU/: SMUManager.cpp  SMUManager.h  ShareMemAO.cpp  ShareMemAO.h
server/Server/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ScenePlayerManager.cpp  ScenePlayerManager.h  SceneThread.cpp
server/Server/Worker/: Scene.cpp  Scene.h  ScenePlayerManager.cpp  ScenePlayerManager.h  SceneThread.cpp  SceneThread.h  Worker.cpp  Worker.h  WorkerManager.cpp  WorkerManager.h  WorkerPlayerManager.cpp  WorkerPlayerManager.h  WorkerThread.cpp  WorkerThread.h
server/Server/tinyxml/: tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
server/Server/tinyxml/docs/: vssver.scc
server/Server/unit_test/: DBLinkTest.cpp  DatabaseManagerTest.cpp  StringArrayTableTest.cpp  simple_test.cpp  unittestutils.cpp  unittestutils.h
server/ShareMemory/: CMakeLists.txt  stdafx.h
server/ShareMemory/DB/: ShareDBManager.cpp  ShareDBManager.h
server/ShareMemory/Main/: CommandThread.cpp  ShareMemory.cpp
server/ShareMemory/ShareData/: SMULogicManager.cpp  SMULogicManager.h
server/World/: CMakeLists.txt  stdafx.h
server/World/Main/: Player.cpp  Player.h  PlayerManager.h  PlayerPool.h  ServerManager.cpp  ServerManager.h  ShareMemManager.cpp  ShareMemManager.h  World.cpp
server/World/Packets/: GWAskMailHandler.cpp  GWSystemMsgHandler.cpp  NullHandler.cpp
server/engine/: .gitmodules  CMakeLists.txt
